--- a/src/components/PdfPreview.tsx.css
+++ b/src/components/PdfPreview.tsx.css
@@ -37,8 +37,20 @@
 .page-container {
   display: flex;
   justify-content: center;
+  margin: auto;
 }
 
 .pdf-scrollview {
-  height: 75vh;
+  height: 100%;
+}
+
+.pdf-preview {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.pdf-scrollview {
+  flex: 1 1 auto;
+  height: 100%;
 }
